k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chore-chart
  namespace: colossus-chore-chart
  labels:
    app: chore-chart
    managed-by: colossus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: chore-chart
  template:
    metadata:
      labels:
        app: chore-chart
    spec:
      hostAliases:
        - ip: "192.168.50.250"
          hostnames:
            - "ubuntu.desmana-truck.ts.net"
      containers:
        - name: app
          image: ubuntu:30500/chore-chart:latest
          imagePullPolicy: Always
